@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 5,
+  "count": 6,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2025-09-15T00:00:00Z",
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2025-09-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-26T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
